# gptr

./: README.md
gptr/: CMakeLists.txt  package.xml
gptr/include/: AutoDiffSO3Parameterization.hpp  CloudMatcher.hpp  GNSolver.cpp  GNSolver.h  GaussNewtonUtilities.hpp  GaussianProcess.hpp  LOAM.hpp  SE3JQ.cpp  SE3JQ.hpp  SE3Q.hpp  _SE3JQ.cpp  i2EKFLO.hpp  utility.h
gptr/include/factor/: GPExtrinsicFactor.h  GPExtrinsicFactorAutodiff.h  GPExtrinsicFactorTMN.hpp  GPIMUFactor.h  GPIMUFactorAutodiff.h  GPMotionPriorTwoKnotsFactor.h  GPMotionPriorTwoKnotsFactorAutodiff.h  GPMotionPriorTwoKnotsFactorTMN.hpp  GPPointToPlaneFactor.h  GPPointToPlaneFactorAutodiff.h  GPPointToPlaneFactorTMN.hpp  GPPoseFactor.h  GPProjectionFactor.h  GPTDOAFactor.h  GPTDOAFactorAutodiff.h  GPTWRFactor.h
gptr/include/ikdTree/: ikd_Tree.cpp  ikd_Tree.h
gptr/launch/: gptr_cathhs.rviz  gptr_lo_sim.rviz  gptr_mcdviral.rviz  gptr_pp.rviz  gptr_sim.rviz  gptr_ui.rviz  gptr_vicalib.rviz  run_cathhs.launch.py  run_cathhs.py  run_lio_cathhs_iot.launch  run_lio_psa.py  run_lio_sim.launch  run_lio_sim.py  run_liosim.py  run_liosim_ouster.py  run_mcdviral.py  run_nl.launch  run_pl.launch.py  run_pl.py  run_pp.py  run_sim.launch.py  run_testui.launch  run_uib.launch.py  run_uib.py  run_util.launch  run_util.launch.py  run_util.py  run_vicalib.launch  run_vicalib.launch.py  run_vicalib.py
gptr/scripts/: cartinbot_viz.py  runall_cathhs.sh  runall_liosim.sh  runall_liosim_nonoise.sh  runall_liosim_ouster.sh
gptr/src/: GPLO.cpp  GPLO.hpp  GPNL.cpp  GPNL.hpp  GPPL.cpp  GPPP.cpp  GPUI.cpp  GPUI.hpp  GPUIB.cpp  GPVICalib.cpp  GPVICalib.hpp  testLIO.cpp  testLie.cpp  testUI.cpp
scripts/: analysis_cathhs.ipynb  analysis_cathhs2.ipynb  analysis_cathhs_final.ipynb  analysis_cathhs_v2.ipynb  analysis_cathhs_v3.ipynb  analysis_mcdviral.ipynb  analysis_sim.ipynb  analysis_sim_v3.ipynb  analyze_pl.ipynb  analyze_pp.ipynb  analyze_uib.ipynb  analyze_vi.ipynb  export_cathhs_pointclouds.ipynb  export_mcd_pointclouds.ipynb  generate_pp_traj.ipynb  generate_synthetic_data.ipynb  generate_synthetic_data_ouster_wxx.ipynb  generate_synthetic_data_w100.ipynb  generate_synthetic_data_w125.ipynb  generate_synthetic_data_w15.ipynb  generate_synthetic_data_w150.ipynb  generate_synthetic_data_w25.ipynb  generate_synthetic_data_w2872.ipynb  generate_synthetic_data_w35.ipynb  generate_synthetic_data_w45.ipynb  generate_synthetic_data_w50.ipynb  generate_synthetic_data_w55.ipynb  generate_synthetic_data_w5743.ipynb  generate_synthetic_data_w65.ipynb  generate_synthetic_data_w75.ipynb  generate_synthetic_data_w85.ipynb  generate_synthetic_data_w8615.ipynb  generate_synthetic_data_wxx.ipynb  nl_check.ipynb  testLie.ipynb
splineui/: CMakeLists.txt  package.xml
splineui/include/: ceres_calib_se3_residuals.h  ceres_calib_spline_se3.h  ceres_calib_spline_split.h  ceres_calib_split_residuals.h
splineui/include/basalt/: ceres_local_param.hpp  rd_spline.h  se3_spline.h  so3_spline.h
splineui/include/utils/: common_utils.h  sophus_utils.hpp
splineui/launch/: run_uib.launch.py  run_uib.py
splineui/src/: SplineUI.cpp
