<?xml version="1.0"?>
<package format="3">
  <name>splineui</name>
  <version>0.0.0</version>
  <description>splineui</description>
  <license>TODO: License declaration</license>

  <maintainer email="ziyu.cao@liu.se">Ziyu Cao</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cf_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Execution/runtime dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cf_msgs</exec_depend> <!-- Ensure cf_msgs is available for ROS 2 -->
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Export build type for ament -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

